--- a/main.tex
+++ b/main.tex
@@ -284,11 +284,13 @@ As it could be expected, ERA5 shared some similarities in the selection of analo
 \section{Conclusions}
 \label{sec:conclusion}
 
-The choice of a reanalysis has a significant impact on the performance of AMs, as already shown in \citet{Horton2018b}. The impact of the dataset on AMs skills can be higher than the one related to the selection of the predictor variables. Other authors drew the same conclusions \cite{Dayon2015}. One of the conclusions of \citet{Horton2018b} is that the latest version of the full-input reanalyses should be used as they contribute to a better skill in the perfect prognosis context and for Switzerland, which is also likely valid for Europe. The subsequent release of ERA5 then raised the question of the potential benefit it could bring over ERA-INT, and to what extent the high spatial resolution could be informative for statistical downscaling.
+The choice of a reanalysis has a significant impact on the performance of AMs in the perfect prognosis context, as already shown in \citet{Horton2018b}. The impact of the dataset on AMs skills can be higher than the one related to the choice of the predictor variables. Other authors drew the same conclusions \cite{Dayon2015}. Generally, the latest version of the full-input reanalyses should be used as they contribute to a better skill for Switzerland, which is also likely valid for Europe. The subsequent release of ERA5 then raised the question of its potential benefits over ERA-INT, and to what extent the high spatial resolution could be informative for statistical downscaling.
 
-This work focused on comparing ERA5 to the other main global reanalyses and showed that it should be the dataset of choice for all tested AMs as it often surpassed the other reanalyses. ERA5 was selected as the best dataset by about 50\% of the stations and was in one of the two first ranks by 75\% of the stations. Although ERA5 globally performed better than ERA-INT for the assessed AMs, ERA-INT was not systematically superseded by ERA5 for all stations. It is thus important to undertake such comparison with a large enough sample of stations in order to capture well the overall picture. Even though ERA5 might not be the best reanalysis for all stations, it would not be advisable to patchwork the selection of reanalyses among stations. It would be recommendable, however, to use not a single but a selection of reanalyses for some applications.
+This work focused on comparing ERA5 to the other main global reanalyses and showed that it should be the dataset of choice for all tested AMs as it often surpassed the other reanalyses. ERA5 was selected as the best dataset by about 50\% of the stations and was in one of the two first ranks for 75\% of the stations. Although ERA5 globally performed better than ERA-INT for the assessed AMs, ERA-INT was not systematically superseded by ERA5 for all stations. It is thus important to undertake such comparison with a large enough sample of stations in order to capture well the overall picture. Even though ERA5 might not be the best reanalysis for all stations, it would not be advisable to patchwork the selection of reanalyses among stations. It would be recommendable, however, to use not a single but a selection of reanalyses for some applications.
 
-ERA5 is provided at high spatial (0.25\degree) and temporal (1~h) resolutions. Although AMs are quick techniques, their calibration over several decades can be time-consuming. This time increases all the more with a higher spatial resolution of the predictor grids. The high resolution even turned into a trap for the calibration technique here that ended up stuck in local minima, resulting in poor skills. When using high-resolution predictor grids, one should take care that the calibration technique used can satisfactorily optimize the spatial windows. The classic+ calibration \citep{Horton2019} could here successfully calibrate the spatial windows thanks to additional moves that allow it to go out of local minima. \citet{Horton2018b} showed that below 1\degree, the gains are limited for AMs. ERA5 was here used at its original resolution as well as with the same resolution as ERA-INT (0.75\degree). The reduction in resolution did not impact the performance of AMs for daily precipitation, here mainly driven by synoptic-scale processes. This conclusion was shown not to be valid for predictands driven by mesoscale drivers. It also implies that the output resolution does not explain the gain in skill compared to ERA-INT, which are likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data.
+ERA5 is provided at high spatial (0.25\degree) and temporal (1~h) resolutions. Although AMs are computationally-light techniques, their calibration over several decades can be time-consuming. This time increases all the more with a higher spatial resolution of the predictor grids. The high resolution even turned into a trap for the calibration technique here that ended up stuck in local minima, resulting in poor skills. When using high-resolution predictor grids, one should take care that the calibration technique used can satisfactorily optimize the spatial windows. The classic+ calibration \citep{Horton2019} could here successfully calibrate the spatial windows thanks to additional moves that allow going out of local minima. 
+
+\citet{Horton2018b} showed that below 1\degree, the gains are limited for AMs. ERA5 was here used at its original resolution as well as with the same resolution as ERA-INT (0.75\degree). The reduction in resolution did not impact the performance of AMs for daily precipitation, here mainly driven by synoptic-scale processes. This conclusion was shown to be not valid for predictands driven by mesoscale drivers. It also implies that the output resolution does not explain the gain in skill compared to ERA-INT, which are likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data.
 
 To conclude, the use of ERA5 is recommended for the prediction of daily precipitation with AMs in Europe, ideally along with other reanalyses to provide a multi-model approach. However, for predictands that are primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
 
