Addition of the graphical abstract.

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 
 \onehalfspacing
 
+% Guidelines: https://rmets.onlinelibrary.wiley.com/hub/journal/10970088/about/author-guidelines
+
 % Update article type if known
 \papertype{Original Article}
 % Include section in journal if known, otherwise delete
@@ -329,6 +331,6 @@ The author has declared no conflict of interest.
 \bibliography{references}
 
 
-\graphicalabstract{example-image-1x1}{Please check the journal's author guildines for whether a graphical abstract, key points, new findings, or other items are required for display in the Table of Contents.}
+\graphicalabstract{figures/boxplot-graphical-abstract.pdf}{It was recently shown that reanalyses have an impact on statistical downscaling methods that can be even higher than the choice of the predictor variables. ERA5 proved here to be relevant when compared to other global reanalyses for the prediction of daily precipitation at 301 stations in Switzerland using six variants of analog methods. However, its high spatial resolution did not contribute to a gain in skill and was even found to be counterproductive for simple calibration techniques.}
 
 \end{document}
