--- a/main.tex
+++ b/main.tex
@@ -18,10 +18,10 @@
 \usepackage{gensymb}
 
 \usepackage[modulo]{lineno}
-
 \usepackage{setspace}
-
 \onehalfspacing
+
+%\geometry{margin=2cm}
 
 % Guidelines: https://rmets.onlinelibrary.wiley.com/hub/journal/10970088/about/author-guidelines
 
@@ -33,7 +33,7 @@
 \title{Should analog methods use ERA5 for statistical precipitation downscaling? }
 
 % List abbreviations here, if any. Please note that it is preferred that abbreviations be defined at the first instance they appear in the text, rather than creating an abbreviations list.
-\abbrevs{AMs, analog methods; ....}
+\abbrevs{AMs, analog methods; NWP, Numerical weather prediction; CP, calibration period; VP, validation period; AP, archive period}
 
 % Include full author names and degrees, when required by the journal.
 % Use the \authfn to add symbols for additional footnotes and present addresses, if any. Usually start with 1 for notes about author contributions; then continuing with 2 etc if any author has a different present address.
@@ -136,12 +136,6 @@ ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from mult
 
 The local variables to be predicted are here daily precipitation totals (06:00~h~UTC to 06:00~h~UTC the following day) at 301 stations of the MeteoSwiss network in Switzerland (Fig. \ref{fig:stations}), with good coverage of the 1981--2010 period. The 30-year precipitation dataset was divided into a calibration period (CP) and an independent validation period (VP), which was evenly distributed over the entire series (1 year out of every 5; a total of 6 years). The archive period (AP), where the analog dates are being retrieved, is the same as the CP -- also with the VP being excluded -- with an additional exclusion of $\pm30$ days around the target date. The results below are always presented for the VP.
 
-\begin{figure}
-	\includegraphics[width=70mm]{figures/map-stations.jpg}\\
-	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo.}
-	\label{fig:stations}
-\end{figure}
-
 
 \subsection{Analog methods}
 \label{sec:ams}
@@ -236,32 +230,10 @@ The skill scores of the different methods and reanalyses are shown in Fig. \ref{
 ERA5 was selected as the best reanalysis for about 50\% of the stations on average, with a minimum of 34.9\% for 4Z and a maximum of 78.7\% for PT-2Z-4MI. When considering the first two ranks, ERA5 was selected 75\% on average, with a minimum of 61.8\% for PT-2Z-4W-4MI and a maximum of 91.7\% for PT-2Z-4MI. There were no specific spatial patterns as to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Also, ERA-INT was not systematically superseded by ERA5, and ERA-INT remained the best choice for some stations and methods. It is thus important to undertake such a comparison with different AMs and multiple stations.
 
 
-\begin{figure}[bt]
-	\centering
-	\includegraphics[width=\textwidth]{figures/boxplot-per-method.pdf}
-	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
-	\label{fig:comparison_values}
-\end{figure}
-
-\begin{figure}[bt]
-	\centering
-	\includegraphics[width=\textwidth]{figures/boxplot-per-method-diff.pdf}
-	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
-	\label{fig:comparison_relative}
-\end{figure}
-
-
 \subsection{High resolution and its pitfalls}
 \label{sec:results_hires}
 
 Although the calibrations have been made on an HPC cluster, they ended up to be highly time-consuming when using the semi-automatic sequential procedure (classic calibration, Sect. \ref{sec:calibration}). The reason is that the process involves first the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid. Then, the spatial window in growing by assessing extensions in every four dimensions and by applying the one with the highest gain. On a high-resolution grid, these procedures imply numerous assessments.
-
-\begin{figure}[bt]
-	\centering
-	\includegraphics[width=100mm]{figures/boxplot-resol-diff.pdf}
-	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; see explanation in text). The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
-	\label{fig:resolution}
-\end{figure}
 
 The first results of the calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An examination of these results revealed that the spatial windows did not grow as much as expected and were not optimal. The reason being that the classic calibration got stuck in local minima during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5. The high resolution generates in a noisier response surface in terms of skill, with local minima that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including increases of multiple grid points at once to get out of local minima. The classic+ calibration also ended up to be faster as it does not assess every grid point in the calculation of the relevance map. A global optimization technique, such as genetic algorithms \citep{Horton2017a}, would also efficiently overcome this issue. However, they are generally computationally intensive and too much time consuming for this comparison work. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets
 
@@ -272,13 +244,6 @@ The first results of the calibration showed that ERA5 (grayed bars in Fig. \ref{
 \label{sec:results_shared_dates}
 
 The use of predictors from different datasets, and with distinct spatial windows, results in a different selection of analog dates. The percentage of identical analog dates for the different AMs over the VP is shown in Fig. \ref{fig:shared-dates}. This percentage decreases with the complexity of the AM, and range from a maximum of 74\% between NR-1 and NR-2 for the 2Z method to a minimum of 10\% between MERRA-2 and 20CR-2c for the PT-2Z-4W-4MI method. It is likely that if all reanalyses were compared over the same spatial windows, these numbers would be higher.
-
-\begin{figure}[bt]
-	\centering
-	\includegraphics[width=120mm]{figures/similar-dates.pdf}
-	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
-	\label{fig:shared-dates}
-\end{figure}
 
 As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not to an extent that is significantly different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with a high spatial resolution (Table \ref{table:datasets}), but with fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree). It should be noted, however, that JRA-55 shares more analog dates with ERA-INT than with ERA5. 
 
@@ -323,7 +288,7 @@ The author has declared no conflict of interest.
 %Anyone who has never made a mistake has never tried anything new.
 %\end{epigraph}
 
-
+\linespread{1}
 
 %\printendnotes
 
@@ -331,6 +296,47 @@ The author has declared no conflict of interest.
 \bibliography{references}
 
 
+
+\begin{figure}
+	\includegraphics[width=70mm]{figures/map-stations.jpg}\\
+	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo.}
+	\label{fig:stations}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=\textwidth]{figures/boxplot-per-method.pdf}
+	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
+	\label{fig:comparison_values}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=\textwidth]{figures/boxplot-per-method-diff.pdf}
+	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
+	\label{fig:comparison_relative}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=100mm]{figures/boxplot-resol-diff.pdf}
+	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; see explanation in text). The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
+	\label{fig:resolution}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=120mm]{figures/similar-dates.pdf}
+	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
+	\label{fig:shared-dates}
+\end{figure}
+
+
+
 \graphicalabstract{figures/boxplot-graphical-abstract.pdf}{It was recently shown that reanalyses have an impact on statistical downscaling methods that can be even higher than the choice of the predictor variables. ERA5 proved here to be relevant when compared to other global reanalyses for the prediction of daily precipitation at 301 stations in Switzerland using six variants of analog methods. However, its high spatial resolution did not contribute to a gain in skill and was even found to be counterproductive for simple calibration techniques.}
+
+
+
+
 
 \end{document}
