--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -269,7 +269,7 @@ Precipitation time series were provided by MeteoSwiss. The NCEP/NCAR, NCEP/DOE, 
 \section*{data availability}
 All calculations were performed with the open-source AtmoSwing software v2.1.1 \citep{Horton2019c}. The resulting files were processed using AtmoSwing R-toolbox v1.2.0 \citep{Horton2018d}.
 
-The resulting analog dates for every combination of station, reanalysis, and analog method were published. These archives also contain different files: the parameter files used in AtmoSwing for the calibration, the resulting calibrated parameters, and files listing all assessed parameter sets. These files are available for ERA5 (...) and the other reanalyses \citep[see references in][]{Horton2018b}.
+The resulting analog dates for every combination of station, reanalysis, and analog method were published. These archives also contain different files: the parameter files used in AtmoSwing for the calibration, the resulting calibrated parameters, and files listing all assessed parameter sets. These files are available for ERA5 (<...TO BE UPDATED...>) and the other reanalyses \citep[see references in][]{Horton2018b}.
 
 %TODO: publish data
 
@@ -296,46 +296,46 @@ The author has declared no conflict of interest.
 
 
 
+\graphicalabstract{figure-graph-abstract.pdf}{It was recently shown that reanalyses have an impact on statistical downscaling methods that can be even higher than the choice of the predictor variables. ERA5 proved here to be relevant when compared to other global reanalyses for the prediction of daily precipitation at 301 stations in Switzerland using six variants of analog methods. However, its high spatial resolution did not contribute to a gain in skill and was even found to be counterproductive for simple calibration techniques.}
+
+
+
+\clearpage
+\pagebreak
+
 \begin{figure}
-	\includegraphics[width=70mm]{fig-horton-1.jpg}\\
+	\includegraphics[width=80mm]{figure-1.jpg}\\
 	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo.}
 	\label{fig:stations}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=\textwidth]{fig-horton-2.pdf}
+	\includegraphics[width=\textwidth]{figure-2.pdf}
 	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
 	\label{fig:comparison_values}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=\textwidth]{fig-horton-3.pdf}
+	\includegraphics[width=\textwidth]{figure-3.pdf}
 	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
 	\label{fig:comparison_relative}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=100mm]{fig-horton-4.pdf}
+	\includegraphics[width=100mm]{figure-4.pdf}
 	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; see explanation in text). The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
 	\label{fig:resolution}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=120mm]{fig-horton-5.pdf}
+	\includegraphics[width=120mm]{figure-5.pdf}
 	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
 	\label{fig:shared-dates}
 \end{figure}
-
-
-
-\graphicalabstract{fig-horton-graph-abstract.pdf}{It was recently shown that reanalyses have an impact on statistical downscaling methods that can be even higher than the choice of the predictor variables. ERA5 proved here to be relevant when compared to other global reanalyses for the prediction of daily precipitation at 301 stations in Switzerland using six variants of analog methods. However, its high spatial resolution did not contribute to a gain in skill and was even found to be counterproductive for simple calibration techniques.}
-
-
-
 
 
 \end{document}
