Submission of the article.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -63,7 +63,7 @@ However, ERA5 is delivered with a high spatial resolution (0.25\degree), which t
 
 
 % Please include a maximum of seven keywords
-\keywords{reanalyses, ERA5, statistical downscaling, analog method, precipitation, Switzerland}
+\keywords{Reanalyses, ERA5, Statistical downscaling, Analog methods, Precipitation, Switzerland}
 
 \end{abstract}
 
