Adding reference to Fig. 1

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -305,7 +305,7 @@ The author has declared no conflict of interest.
 
 \begin{figure}
 	\includegraphics[width=80mm]{figure-1.jpg}\\
-	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo.}
+	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo. Modified from \citet{Horton2018b}.}
 	\label{fig:stations}
 \end{figure}
 
