--- a/references.bib
+++ b/references.bib
@@ -697,6 +697,15 @@
 	volume = {145},
 	year = {2017}
 }
+@article{Horton2017b,
+    title = {{The analogue method for precipitation prediction: finding better analogue situations at a sub-daily time step}},
+    year = {2017},
+    journal = {Hydrology and Earth System Sciences},
+    author = {Horton, Pascal and Obled, Charles and Jaboyedoff, Michel},
+    pages = {3307--3323},
+    volume = {21},
+    doi = {10.5194/hess-21-3307-2017}
+}
 @article{Horton2019,
 	author = {Horton, Pascal},
 	doi = {10.5194/gmd-12-2915-2019},
